<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MemberActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/lavender"
        android:textColor="@color/white"
        android:text="@string/pkg_v_member"
        android:textSize="28sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/light_gray"
        android:textColor="@color/onyx"
        android:text="@string/v_mem_description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/light_gray"
        android:textColor="@color/onyx"

        android:text="@string/v_mem_price" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/pay" />

    <TextView
        android:id="@+id/adArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ad_area"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@color/light_gray"/>

</LinearLayout>