<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/lavender"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/membership_title"/>

    <Button
        android:id="@+id/btnMember"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:padding="30dp"
        android:text="@string/pkg_member"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnVerifiedMember"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:text="@string/pkg_v_member"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnAuthAgent"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:padding="30dp"
        android:text="@string/pkg_auth"
        android:textSize="20sp" />

</LinearLayout>